--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<mat-toolbar></mat-toolbar>
-<app-home [counter]="counter"></app-home>
+<mat-toolbar>
+  <button aria-label="Submit Form Page" (click)="navigateToForm()">
+    <mat-icon>send</mat-icon>
+  </button>
+  <button aria-label="Submit Form Page" (click)="navigateToList()">
+    <mat-icon>list</mat-icon>
+  </button>
+</mat-toolbar>
+<router-outlet></router-outlet>
